--- a/css/barsstyle.css
+++ b/css/barsstyle.css
@@ -30,7 +30,7 @@ a:focus {
 	text-decoration: none;
 }
 body{
-	font-family: 'Lato', sans-serif;
+	/*font-family: 'Lato', sans-serif;*/
 }
 a {
 	text-decoration:none;
@@ -64,7 +64,7 @@ a:hover {
 	width: 100%;
 	height: 40px;
 	position:relative;
-	margin-bottom:30px;
+	margin-bottom:15px;
 }
 .skillst6 .count-bar{
 	height: 100%;
@@ -75,23 +75,23 @@ a:hover {
 	border-radius: 3px;
 }
 .skillst6 .count-bar.color-1{
-	background-color: #a14ff3;
+	background-color: #41c3c7;
 
 }
 .skillst6 .count-bar.color-2{
-	background-color: #a14ff3;
+	background-color: #41c3c7;
 
 }
 .skillst6 .count-bar.color-3{
-	background-color: #a14ff3;
+	background-color: #41c3c7;
 
 }
 .skillst6 .count-bar.color-4{
-	background-color: #a14ff3;
+	background-color: #41c3c7;
 
 }
 .skillst6 .count-bar.color-5{
-	background-color: #a14ff3;
+	background-color: #41c3c7;
 
 }
 .skillst6 .title{
