--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,9 @@ a.active {
   color: #18BC9C;
   outline: none;
 }
+h2{
+  text-align: center;
+}
 h1,
 h2,
 h3,
@@ -51,17 +54,17 @@ hr.star-primary:after {
   padding: 0 0.25em;*/
 }
 hr.star-light {
-  border-color: white;
+  border-color: black;
 }
 hr.star-light:after {
   background-color: #ff926f;
-  color: white;
+  color: black;
 }
 hr.star-primary {
   border-color: #2C3E50;
 }
 hr.star-primary:after {
-  background-color: white;
+  background-color: black;
   color: #2C3E50;
 }
 .img-centered {
@@ -69,10 +72,8 @@ hr.star-primary:after {
 }
 header {
   text-align: center;
-  background: #fc00ff; /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #fc00ff , #00dbde); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #fc00ff , #00dbde); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */     
-  color: white;
+  background: #ffffff; /* fallback for old browsers */
+  color: black;
 }
 header .container {
   padding-top: 100px;
@@ -81,12 +82,12 @@ header .container {
 header img {
   display: block;
   margin: 0 auto 25px;
-  margin-top: 80px;
+  margin-top: 150px;
 
 }
 header .intro-text .name {
   display: block;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 2em;
@@ -109,7 +110,7 @@ header .intro-text .skills {
 }
 .navbar-custom {
   background: transparent;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Quicksand', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   border: none;
@@ -118,48 +119,48 @@ header .intro-text .skills {
   outline: none;
 }
 .navbar-custom .navbar-brand {
-  color: white;
+  color: black;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
-  color: white;
+  color: black;
 }
 .navbar-custom .navbar-nav {
   letter-spacing: 1px;
 }
 .navbar-custom .navbar-nav li a {
-  color: white;
+  color: black;
 }
 .navbar-custom .navbar-nav li a:hover {
-  color: #a92b2b;
+  color: #41c3c7;
   outline: none;
 }
 .navbar-custom .navbar-nav li a:focus,
 .navbar-custom .navbar-nav li a:active {
-  color: white;
+  color: black;
 }
 .navbar-custom .navbar-nav li.active a {
-  color: #a92b2b;
+  color: #41c3c7;
   background: transparent;
 }
 .navbar-custom .navbar-nav li.active a:hover,
 .navbar-custom .navbar-nav li.active a:focus,
 .navbar-custom .navbar-nav li.active a:active {
-  color: white;
+  color: black;
   background: transparent;
 }
 .navbar-custom .navbar-toggle {
-  color: white;
+  color: black;
   text-transform: uppercase;
   font-size: 10px;
-  border-color: white;
+  border-color: black;
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
   background-color: transparent;
-  color: white;
+  color: black;
   border-color: #18BC9C;
 }
 @media (min-width: 768px) {
@@ -183,7 +184,7 @@ header .intro-text .skills {
   }
 }
 section {
-  padding: 100px 0;
+  padding: 60px 0;
 }
 section h2 {
   margin: 0;
@@ -191,10 +192,8 @@ section h2 {
 }
 section.success {
   /*background: #18BC9C;*/
-background: #fc00ff; /* fallback for old browsers */
-background: -webkit-linear-gradient(to left, #fc00ff , #00dbde); /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to left, #fc00ff , #00dbde); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-          color: white;
+background: #ffffff; /* fallback for old browsers */
+color: black;
 }
 @media (max-width: 767px) {
   section {
@@ -319,9 +318,9 @@ footer .footer-below {
   background-color: #233140;
 }
 .btn-outline {
-  color: white;
+  color: black;
   font-size: 20px;
-  border: solid 2px white;
+  border: solid 2px black;
   background: transparent;
   transition: all 0.3s ease-in-out;
   margin-top: 15px;
@@ -330,14 +329,14 @@ footer .footer-below {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-  color: #a14ff3;
+  color: #41c3c7;
   background: white;
-  border: solid 2px white;
+  border: solid 2px #41c3c7;
 }
 .btn-primary {
   color: white;
-  background-color: #2C3E50;
-  border-color: #2C3E50;
+  background-color: #41c3c7;
+  border-color: #41c3c7;
   font-weight: 700;
 }
 .btn-primary:hover,
@@ -416,13 +415,13 @@ fieldset[disabled] .btn-success.active {
 }
 .btn-success .badge {
   color: #18BC9C;
-  background-color: white;
+  background-color: black;
 }
 .btn-social {
   display: inline-block;
   height: 50px;
   width: 50px;
-  border: 2px solid white;
+  border: 2px solid black;
   border-radius: 100%;
   text-align: center;
   font-size: 20px;
@@ -509,4 +508,15 @@ fieldset[disabled] .btn-success.active {
 .portfolio-modal .modal-backdrop {
   opacity: 0;
   display: none;
+}
+/* Custom CSS */
+#prefooter{
+  height: 520px;
+
+}
+#profile{
+  max-height: 200px !important;
+}
+#btndonwload{
+  border-radius: 0 !important;
 }
