--- a/templates/headernav.html
+++ b/templates/headernav.html
@@ -41,7 +41,7 @@
                     <div class="intro-text">
                         <span class="name">Marina Lafuente</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">Web Developer - Graphic Artist - Illustration & more</span>
                     </div>
                 </div>
             </div>
