--- a/templates/modals.html
+++ b/templates/modals.html
@@ -4,22 +4,22 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title {{work.proyect_title}}</h2>
+                            <h2>{{work.proyect_title}}</h2>
                             <hr class="star-primary">
                             <img ng-src="{{work.image}}" class="img-responsive img-centered" alt="">
                             <p>{{work.description}}</p>
                             <br>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">{{work.client}}</a>
+                                    <strong><a>{{work.client}}</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a>April 2014</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Visit:
+                                    <strong><a ng-href="{{work.visit}}">{{work.visit}}</a>
                                     </strong>
                                 </li>
                             </ul>
