--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ body {
 }
 p {
   font-size: 20px;
+  margin-top: 20px;
 }
 p.small {
   font-size: 16px;
@@ -188,7 +189,7 @@ section {
 }
 section h2 {
   margin: 0;
-  font-size: 3em;
+  font-size: 2.5em;
 }
 section.success {
   /*background: #18BC9C;*/
@@ -206,13 +207,16 @@ color: black;
 #portfolio .portfolio-item {
   margin: 0 0 15px;
   right: 0;
+  max-height: 100%;
 }
 #portfolio .portfolio-item .portfolio-link {
   display: block;
   position: relative;
-  max-width: 400px;
+  max-width: 100%;
+  max-height: 100%;
   margin: 0 auto;
 }
+/*Este estilo es el de los items en pequeño*/
 #portfolio .portfolio-item .portfolio-link .caption {
   background: rgba(24, 188, 156, 0.9);
   position: absolute;
